show offline streamers
next: toggle offline/online/closed

--- a/app/index.html
+++ b/app/index.html
@@ -41,9 +41,15 @@
 
     <div class="body">
 
-      <div class="cards">
 
+
+      <div class="online">
       </div>
+
+      <div class="offline">
+      </div>
+
+
 
       <div class="footer">
         <p>♥ Daven</p>
