toggle offline/online

--- a/app/index.html
+++ b/app/index.html
@@ -31,15 +31,18 @@
 
   <div class="container">
     <div class="header">
-      <ul class="pull-right">
-        <a class="waves-effect waves-light btn" href="#">Home</a>
-        <a class="waves-effect waves-light btn" href="#">About</a>
-        <a class="waves-effect waves-light btn" href="#">Contact</a>
+      <ul class="inline-toggle pull-right">
+        <p>
+          <input type="checkbox" id="test5" checked="checked"/>
+          <label for="test5">Online &nbsp &nbsp</label>
+        </p>
+        <p>
+          <input type="checkbox" id="test6" checked="checked" />
+          <label for="test6">Offline</label>
+        </p>
       </ul>
-      <h3 class="text-muted">mctwitchy</h3>
+      <h3 class="text-muted main-text">mctwitchy</h3>
     </div>
-
-    <div class="body">
 
 
 
